plugins and tasks html doc generator